<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/backgrnd"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="208dp"
        android:layout_height="127dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="TODO" />

    <android.support.v7.widget.CardView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="29dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signin"
                android:textAlignment="center"
                android:textColor="@color/lightpurple"
                android:textSize="34sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/lightpurple"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"

                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/lightpurple"
                app:hintTextAppearance="@style/CustomHintTextAppearance">

                <android.support.design.widget.TextInputEditText

                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:background="@drawable/form"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>




            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/forgot_password"
                android:textAlignment="textStart"
                android:textColor="@color/lightpurple"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btnshape"
                android:fontFamily="@font/poppins_regular"
                android:onClick="success"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="DuplicateSpeakableTextCheck" />



        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_medium"
        android:onClick="loigin"
        android:padding="8dp"
        android:text="@string/not_yet_registered_sign_up"
        android:textAlignment="center"
        android:textColor="@color/lightpurple"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />


</LinearLayout>